# rtlola-streamir

./: .gitignore  Cargo.toml
rtlola-jit-interpreter/: Cargo.toml  README.md
rtlola-jit-interpreter/src/: closuregen.rs  csv.rs  lib.rs  memory.rs  schedule.rs  tests.rs  value.rs  verdict.rs
rtlola-jit-interpreter/src/closuregen/: expressions.rs  guards.rs  statements.rs  windows.rs
rtlola2rust/: Cargo.toml  README.md  test.lola
rtlola2rust/src/: api.rs  constructs.rs  error.rs  expressions.rs  guards.rs  io.rs  lib.rs  main_function.rs  memory.rs  names.rs  schedule.rs  statements.rs  types.rs  windows.rs
rtlola2rust/src/expressions/: get.rs  hold.rs  is_fresh.rs  offset.rs  sync.rs
rtlola2rust/src/statements/: eval.rs  input.rs
rtlola2rust/src/windows/: aggregations.rs  instance.rs  sliding.rs
rtlola2rust/templates/: queue.rs
rtlola2rust/templates/stream_buffer/: instance.rs  static.rs
rtlola2rust/templates/windows/: discrete_buffer.rs  sliding_buffer.rs
rtlola2solidity/: Cargo.toml  README.md
rtlola2solidity/src/: expressions.rs  functions.rs  guards.rs  interface.rs  lib.rs  memory.rs  statements.rs  types.rs
rtlola2solidity/src/expressions/: get_access.rs
rtlola2solidity/src/statements/: close.rs  eval.rs  input.rs  shift.rs  spawn.rs
streamir-lib/: Cargo.toml  LICENSE  README.md
streamir-lib/src/: ir.rs  lib.rs
streamir-lib/src/formatter/: files.rs
streamir-lib/src/ir/: low_old.rs  memory.rs
streamir-lib/src/ir/lowering/: expressions.rs
