[package]
name = "rtlola2solidity"
version = "0.1.0"
edition = "2021"
authors = [
    "Jan Baumeister <jan.baumeister@cispa.de>",
    "Frederik Scheerer <frederik.scheerer@cispa.de>",
]
homepage = "https://rtlola.org"
license = "Apache-2.0"


[[bin]]
name = "rtlola2solidity"
path = "src/bin/main.rs"

[dependencies]
tera = "1.20.0"
streamir-lib = { path = "../streamir-lib" }
include_dir = { version = "0.7.4", features = ["glob"] }
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
clap = { version = "4.5.35", features = ["derive"] }
anyhow = "1.0.97"
