[package]
name = "streamir-lib"
version = "0.1.0"
edition = "2021"
authors = [
  "Jan Baumeister <jan.baumeister@cispa.de>",
  "Frederik Scheerer <frederik.scheerer@cispa.de>",
]
license = "Apache-2.0"
homepage = "https://rtlola.org"

[[bin]]
name = "streamir-lib"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
disjoint = "0.8.0"
itertools = "0.14.0"
rtlola-frontend = { path = "../../rtlola-frontend/rtlola-frontend", features=["shift_layer"]}
thiserror = "2.0.12"
uom = { version = "0.31.1", features = ["rational64"] }
winnow = "0.7.3"
